tests/lean/collectDepsIssue.lean.expected.out
collectDepsIssue.lean:5:0-5:1: error: Placeholder could not be inferred.

context:
α : Type
a : α
⊢ List α
collectDepsIssue.lean:8:8-8:11: warning: declaration uses 'sorry'
